WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309134
[hanging-punctuation] Ideographic space should hang when used with `first`
https://bugs.webkit.org/show_bug.cgi?id=309134
Summary
[hanging-punctuation] Ideographic space should hang when used with `first`
Tim Nguyen (:ntim)
Reported
2026-03-03 18:03:11 PST
imported/w3c/web-platform-tests/css/css-text/hanging-punctuation/hanging-punctuation-first-002.html [ ImageOnlyFailure ]
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-03 18:03:17 PST
<
rdar://problem/171679311
>
Tim Nguyen (:ntim)
Comment 2
2026-03-03 18:31:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59859
EWS
Comment 3
2026-03-03 20:16:33 PST
Committed
308605@main
(90d83494fbf3): <
https://commits.webkit.org/308605@main
> Reviewed commits have been landed. Closing PR #59859 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug