Cherry-pick 90d83494fbf3. rdar://172669250

[hanging-punctuation] Ideographic space should hang when used with `first`
    https://bugs.webkit.org/show_bug.cgi?id=309134
    rdar://171679311

    Reviewed by Alan Baradlay.

    As per https://drafts.csswg.org/css-text-4/#hanging-punctuation-property, IDEOGRAPHIC SPACE U+3000 should work for the `first` value.

    Test: imported/w3c/web-platform-tests/css/css-text/hanging-punctuation/hanging-punctuation-first-002.html

    * LayoutTests/TestExpectations:
    * Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp:
    (WebCore::Layout::isHangableOpenPunctuation):

    Canonical link: https://commits.webkit.org/308605@main

Identifier: 305413.501@safari-7624-branch